# asset-classification-smart-contract

./: .editorconfig  .gitignore  .gitpod.Dockerfile  Cargo.toml  LICENSE  Makefile  README.md  service.datadog.yaml
.cargo/: config
.github/: CODEOWNERS
.github/workflows/: rust.yaml
dev-tools/: README.md  example.sh  example_instantiation_message.json
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
docs/asset_classification_smart_contract/: all.html  index.html  sidebar-items.js
docs/asset_classification_smart_contract/contract/: fn.execute.html  fn.instantiate.html  fn.migrate.html  fn.query.html  index.html  sidebar-items.js
docs/asset_classification_smart_contract/core/: index.html  sidebar-items.js
docs/asset_classification_smart_contract/execute/: index.html  sidebar-items.js
docs/implementors/schemars/: trait.JsonSchema.js
examples/: schema.rs
schema/: asset_definition.json  asset_definition_input.json  asset_definition_input_v2.json  asset_definition_input_v3.json  asset_definition_v2.json  asset_definition_v3.json  asset_identifier.json  asset_qualifier.json  asset_scope_attribute.json  execute_msg.json  fee_destination_v2.json  fee_payment_detail.json  init_msg.json  migrate_msg.json  query_msg.json  serialized_enum.json  verifier_detail.json  verifier_detail_v2.json
src/: contract.rs  lib.rs
src/core/: asset.rs  error.rs  mod.rs  msg.rs  state.rs
src/execute/: add_asset_definition.rs  add_asset_validator.rs  add_asset_verifier.rs  bind_contract_alias.rs  delete_asset_definition.rs  finalize_classification.rs  mod.rs  onboard_asset.rs  toggle_asset_definition.rs  update_access_routes.rs  update_asset_definition.rs  update_asset_validator.rs  update_asset_verifier.rs  validate_asset.rs  verify_asset.rs
src/instantiate/: init_contract.rs  mod.rs
src/migrate/: migrate_contract.rs  migrate_to_asset_definition_v2.rs  migrate_to_state_v2.rs  mod.rs  version_info.rs
src/query/: mod.rs  query_asset_by_scope_address.rs  query_asset_definition.rs  query_asset_definitions.rs  query_asset_scope_attribute.rs  query_asset_scope_attribute_by_asset_type.rs  query_fee_payments.rs  query_state.rs  query_version.rs
src/service/: asset_meta_repository.rs  asset_meta_service.rs  deps_manager.rs  message_gathering_service.rs  mod.rs
src/testutil/: finalize_classification_helpers.rs  mock_provenance_util.rs  mod.rs  msg_utilities.rs  onboard_asset_helpers.rs  test_constants.rs  test_utilities.rs  update_access_routes_helpers.rs  validate_asset_helpers.rs  verify_asset_helpers.rs
src/util/: aliases.rs  asset_meta_repository.rs  attribute_keys.rs  constants.rs  contract_helpers.rs  deps_container.rs  event_attributes.rs  fees.rs  functions.rs  message_gathering_service.rs  mod.rs  provenance_util.rs  scope_address_utils.rs  traits.rs  vec_container.rs
src/validation/: execute_msg.rs  init_msg.rs  mod.rs  validate_execute_msg.rs  validate_init_msg.rs
tests/: integration_tests.rs
(+444 files in other folders)
