[package]
name = "asset-classification-smart-contract"
version = "2.0.1"
authors = [
  "Jake Schwartz <jschwartz@figure.com>",
  "Pierce Trey <ptrey@figure.com>",
]
edition = "2021"
# Resolver v2 can exclude uuid v4 feature from the compiled wasm (which includes illegal random code).  Without this,
# a custom feature is required to ensure test code exclusively includes the uuid/v4 feature, which is not ideal
resolver = "2"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication"
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
bech32 = "=0.8.1"
provwasm-std = { version = "=1.1.0" }
cosmwasm-std = { version = "=1.0.0" }
cosmwasm-storage = { version = "=1.0.0" }
cw-storage-plus = "=0.12.1"
schemars = "=0.8.3"
semver = "=1.0.7"
serde = { version = "=1.0.137", default-features = false, features = ["derive"] }
serde-json-wasm = { version = "=0.4.1" }
thiserror = { version = "=1.0.26" }
uuid = "=0.8.2"

[dev-dependencies]
provwasm-mocks = { version = "=1.1.0" }
cosmwasm-schema = { version = "=1.0.0" }
uuid = { version = "=0.8.2", features = ["v4"] }
