[package]
name = "asset-classification-smart-contract"
version = "3.4.1"
authors = [
  "Jake Schwartz <jschwartz@figure.com>",
  "Pierce Trey <ptrey@figure.com>",
]
edition = "2021"
# Resolver v2 can exclude uuid v4 feature from the compiled wasm (which includes illegal random code).  Without this,
# a custom feature is required to ensure test code exclusively includes the uuid/v4 feature, which is not ideal
resolver = "2"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication"
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
bech32 = "=0.8.1"
provwasm-std = { version = "=2.5.0" }
cosmwasm-schema = { version = "=2.1.4" }
cosmwasm-std = { version = "=2.1.4" }
cw-storage-plus = "=2.0.0"
os-gateway-contract-attributes = "=1.0.1"
result-extensions = "=1.0.2"
schemars = "=0.8.21"
semver = "=1.0.7"
serde = { version = "=1.0.215", default-features = false, features = ["derive"] }
thiserror = { version = "=1.0.65" }
uuid = "=1.11.0"

[dev-dependencies]
provwasm-mocks = { version = "=2.5.0" }
provwasm-test-tube = "=0.2.0"
uuid = { version = "=1.11.0", features = ["v4"] }
